Working on landing

--- a/junior/fylo_landing_page/index.html
+++ b/junior/fylo_landing_page/index.html
@@ -10,8 +10,34 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-    <header class="head">
-      
-    </header>
+    <div class="head">
+      <object data="./images//logo.svg" type=""></object>
+      <nav>
+        <ul>
+          <li><a href="">Features</a></li>
+          <li><a href="">Team</a></li>
+          <li><a href="">Sign In</a></li>
+        </ul>
+      </nav>
+    </div>
+    <main>
+      <div class="landing">
+        <div class="landing-left">
+          <h1>All your files in one secure location, accessible anywhere.</h1>
+          <p>
+            Fylo stores your most important files in one secure location.
+            Access them wherever you need, share and collaborate with friends,
+            family, and co-workers.
+          </p>
+          <form action="">
+            <input type="text" placeholder="Enter your email...">
+            <input class="btn" type="submit" value="Get Started">
+          </form>
+        </div>
+        <div class="landing-right">
+          <img src="./images//illustration-1.svg" alt="">
+        </div>
+      </div>
+    </main>
   </body>
 </html>
