--- a/junior/fylo_landing_page/index.html
+++ b/junior/fylo_landing_page/index.html
@@ -39,6 +39,38 @@
           <img src="./images//illustration-1.svg" alt="">
         </div>
       </div>
+      <div class="mission">
+        <div class="mission-left">
+          <div class="mission-text">
+            <h1>Stay productive, wherever you are</h1>
+            <p>
+              Never let location be an issue when accessing your files.
+              Fylo has you covered for all your file storage needs.
+            </p>
+            <p>
+              Securely share files and folders with friends, family, and colleagues for 
+              live collaboration. No email attachments required!
+            </p>
+            <a href="">See how Fylo works <object data="./images/icon-arrow.svg" type=""></object></a>
+          </div>
+          <div class="review">
+            <object data="./images/icon-quotes.svg" type=""></object>
+            <p class="review-p">
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled collaboration
+              machine.
+            </p>
+            <div class="footer-review">
+              <img src="./images/avatar-testimonial.jpg" alt="">
+              <h6>Kyle Burton</h6>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+        <div class="mission-right">
+          <img src="./images/illustration-2.svg" alt="">
+        </div>
+      </div>
     </main>
     <script>
 
